--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <body>  
   
 <script>  
-function checkWeChat() {  
+function checkClient() {  
     var ua = navigator.userAgent;  
-    if (ua.indexOf('MicroMessenger') > -1) {  
-        window.location.href = 'http://www.qq.com';  // 如果是微信，跳转到qq.com  
+    if (ua.indexOf('QQ') > -1) {  
+        window.location.href = 'http://www.qq.com';  // 如果是QQ，跳转到qq.com  
+    } else if (ua.indexOf('MicroMessenger') > -1) {  
+        window.location.href = 'http://weixin.qq.com';  // 如果是微信，跳转到weixin.qq.com  
     } else {  
-        window.location.href = 'http://www.baidu.com';  // 如果不是微信，跳转到baidu.com  
+        window.location.href = 'http://www.baidu.com';  // 如果不是微信和QQ，跳转到baidu.com  
     }  
 }  
   
-checkWeChat();  // 调用函数检查并跳转  
+checkClient();  // 调用函数检查并跳转  
 </script>  
   
 </body>  
