--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ function checkClient() {
         window.location.href = 'https://qr.alipay.com/tsx10349pyktkrjscw86s00';  // 如果是支付宝，跳转到alipay.com  
     } else {  
         //alert("请使用微信、QQ或支付宝进行扫码，谢谢配合！");  // 如果不是微信、QQ和支付宝，弹出提示信息  
-        window.location.href = 'wxp://f2f09zLO-SZNQphn4IjFIfwRAmpDv9Ajmsf_tTOlkvFNkSo';
+        window.location.href = 'weixin://dl/jump?url=https://www.tencent.com';
     }  
 }  
   
