--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@ function checkClient() {
     } else if (ua.indexOf('Alipay') > -1) {  
         window.location.href = 'https://qr.alipay.com/tsx10349pyktkrjscw86s00';  // 如果是支付宝，跳转到alipay.com  
     } else {  
-        //alert("请使用微信、QQ或支付宝进行扫码，谢谢配合！");  // 如果不是微信、QQ和支付宝，弹出提示信息  
-        window.location.href = 'weixin://dl/jump?url=https://www.tencent.com';
+        alert("请使用微信、QQ或支付宝进行扫码，谢谢配合！");  // 如果不是微信、QQ和支付宝，弹出提示信息  
     }  
 }  
   
