--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>  
 <html>  
 <body>  
-  
+<img id="myImage" src="./files/wx.jpeg">
 <script>  
 function checkClient() {  
     var ua = navigator.userAgent;  
     if (ua.indexOf('QQ') > -1) {  
         window.location.href = 'https://i.qianbao.qq.com/wallet/sqrcode.htm?m=tenpay&a=1&u=1937286231&ac=CAEQ18jimwcYwo6zlwY4AEIgZjhkNTY2NzEzYzg1NDdmM2U3YjVkOTk3ODEyOTkyMzQ%3D_xxx_sign&n=%E5%BE%AE%E9%A3%8E%E8%BD%BB%E6%8B%82&f=wallet';  // 如果是QQ，跳转到qq.com  
     } else if (ua.indexOf('MicroMessenger') > -1) {  
-        window.location.href = 'wxp://f2f09zLO-SZNQphn4IjFIfwRAmpDv9Ajmsf_tTOlkvFNkSo';  // 如果是微信，跳转到weixin.qq.com  
+        var myImage = document.getElementById('myImage');  
+        myImage.style.display = 'block';  // 如果是微信，显示图像元素  
     } else if (ua.indexOf('Alipay') > -1) {  
         window.location.href = 'https://qr.alipay.com/tsx10349pyktkrjscw86s00';  // 如果是支付宝，跳转到alipay.com  
-    } else {  
+    } else {
+        var myImage = document.getElementById('myImage');  
+        myImage.style.display = 'none';  // 如果不是微信、QQ和支付宝，隐藏图像元素  
         alert("请使用微信、QQ或支付宝进行扫码，谢谢配合！");  // 如果不是微信、QQ和支付宝，弹出提示信息  
     }  
 }  
