--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>  
-<html>  
+<html> 
 <body>  
-<img id="myImage" src="./files/wx.jpeg">
 <script>  
 function checkClient() {  
     var ua = navigator.userAgent;  
     if (ua.indexOf('QQ') > -1) {  
         window.location.href = 'https://i.qianbao.qq.com/wallet/sqrcode.htm?m=tenpay&a=1&u=1937286231&ac=CAEQ18jimwcYwo6zlwY4AEIgZjhkNTY2NzEzYzg1NDdmM2U3YjVkOTk3ODEyOTkyMzQ%3D_xxx_sign&n=%E5%BE%AE%E9%A3%8E%E8%BD%BB%E6%8B%82&f=wallet';  // 如果是QQ，跳转到qq.com  
     } else if (ua.indexOf('MicroMessenger') > -1) {  
-        var myImage = document.getElementById('myImage');  
-        myImage.style.display = 'block';  // 如果是微信，显示图像元素  
+        window.location.href = 'https://ihz4z.github.io/Weixin.html';  // 如果是微信，跳转到weixin.qq.com  
     } else if (ua.indexOf('Alipay') > -1) {  
         window.location.href = 'https://qr.alipay.com/tsx10349pyktkrjscw86s00';  // 如果是支付宝，跳转到alipay.com  
     } else {
