--- a/Weixin.html
+++ b/Weixin.html
@@ -19,7 +19,7 @@
             <div class="icon"></div>
             <div class="text">个人赞赏码已通过安全验证</div>
         </div>
-        <p id="scanTips">请长按下方赞赏码打赏</p>
+        <p id="scanTips">请长按下方赞赏码</p>
         <div id="zm_qrcode">
             <img id="myImage" src="">
         </div>
