--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ function checkClient() {
   
 checkClient();  // 调用函数检查并跳转  
 </script>  
-  
+<h1>杭州第四中学欢迎您！</h1>
+<h2>正直 俭朴 尚礼 扬善</h2>  
 </body>  
 </html>
